@@ -1,3 +1,4 @@
+(ENHANCE) Port Tk's choose color dialog to Ttk Widgets
 (ENHANCE) Port the 'preferences' dialog to Ttk widgets
 (BUGFIX) Fix the 'Delete' button in the start dialog in Windows
 (BUGFIX) Fix the way the Tree widget talks to vertical Ttk scrollbars
